--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-  name = Ben Hamill
-  email = git-commits@benhamill.com
+  name = Andrew Harrison
+  email = andrew@literati.com
 [alias]
   st = status
   co = checkout
@@ -8,7 +8,7 @@
   l = log -n10 --pretty=format:'%C(yellow)%h%C(reset) %C(blue)%an%C(reset) %C(green)(%cr)%C(reset) -%C(bold blue)%d%C(reset) %s'
   p = pull --prune
   pr = pull-request
-  amend = commit --amend --no-edit
+  # amend = commit --amend --no-edit
 [core]
   excludesfile = ~/.gitignore
   autocrlf = input
@@ -27,7 +27,7 @@
 [push]
   default = current
 [github]
-  user = benhamill
+  user = atharrison
   token = $GITHUB_TOKEN ; Set in ~/.bashrc.local
 [tag]
   sort = version:refname
